fixed [BUG] Article creation popup fields are not aligned properly

--- a/ui/SASS/_placepickerMap.scss
+++ b/ui/SASS/_placepickerMap.scss
@@ -2,10 +2,9 @@
     width: 100%;
     height: 200px;
     margin-bottom: 20px;
+    box-sizing: content-box;
+    margin-top: -15px;
 }
 .hiddenPlacepicker {
     display: none;
-}
-#article-modal {
-    display: block;
 }
